# claude-code-iterm2-tab-status

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
commands/: config.md  setup.md
hooks/: hooks.json
plugins/iterm2-tab-status/.claude-plugin/: plugin.json
plugins/iterm2-tab-status/commands/: uninstall.md
plugins/iterm2-tab-status/hooks/: hooks.json
plugins/iterm2-tab-status/scripts/: bootstrap.sh  cleanup.sh  hook.sh
scripts/: claude_tab_status.py  hook.sh
tests/: test_adapter.py  test_bootstrap.sh  test_hooks.sh  test_integration.py  test_plugin_structure.sh
